# rust-tictactoe

./: Cargo.toml  LICENSE  README.md  default.json
src/: board.rs  error.rs  game.rs  game_state.rs  lib.rs  move_.rs  player.rs  tictactoe_error.rs  utils.rs
src/builtin/: human_player.rs  mod.rs
src/players/: mod.rs  random_player.rs
tests/: check_winner_tests.rs  game_creation_tests.rs
