[package]
name = "tictactoe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["cargo"] }
colored = "2.0.0"
text_io = { git = "https://github.com/Genius1512/rust_text_io.git" }
